[package]
name = "rog_fan_curve"
version = "0.1.0"
authors = ["ryan <yarnnd@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yarn/rog_fan_curve"
description = "A library and cli for setting fan curves on some asus laptops."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata."docs.rs"]
all-features = true

[dependencies]
serde = { version = "^1.0", optional = true }

[dev-dependencies]
serde_json = "1.0.56"
